[gd_scene load_steps=22 format=3 uid="uid://brxbrris055gd"]

[ext_resource type="Script" path="res://ImpMob.gd" id="1_cp61c"]
[ext_resource type="Texture2D" uid="uid://w38yajb2rp8k" path="res://Art/ImpDeath-export.png" id="2_aweld"]
[ext_resource type="Texture2D" uid="uid://dmfy6g70ff5tm" path="res://Art/walkimp-export.png" id="3_uw6ih"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d6ysy"]
radius = 36.2215

[sub_resource type="AtlasTexture" id="AtlasTexture_ijb1x"]
atlas = ExtResource("2_aweld")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kdy6"]
atlas = ExtResource("2_aweld")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xlyq"]
atlas = ExtResource("2_aweld")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_crydh"]
atlas = ExtResource("2_aweld")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv5mh"]
atlas = ExtResource("2_aweld")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce5tn"]
atlas = ExtResource("2_aweld")
region = Rect2(1600, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbog6"]
atlas = ExtResource("2_aweld")
region = Rect2(1920, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fg7t"]
atlas = ExtResource("2_aweld")
region = Rect2(2240, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro0n1"]
atlas = ExtResource("2_aweld")
region = Rect2(2560, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_egnhc"]
atlas = ExtResource("2_aweld")
region = Rect2(2880, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcml3"]
atlas = ExtResource("2_aweld")
region = Rect2(3200, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpjks"]
atlas = ExtResource("2_aweld")
region = Rect2(3520, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_gee6m"]
atlas = ExtResource("3_uw6ih")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_acfb3"]
atlas = ExtResource("3_uw6ih")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4aq7"]
atlas = ExtResource("3_uw6ih")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_41hmj"]
atlas = ExtResource("3_uw6ih")
region = Rect2(960, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_u37wi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijb1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kdy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xlyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crydh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv5mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce5tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbog6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fg7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro0n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egnhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcml3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpjks")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gee6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acfb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4aq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41hmj")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="ImpMob" type="Area2D"]
position = Vector2(143, 102)
script = ExtResource("1_cp61c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_d6ysy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 2)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_u37wi")
animation = &"walk"

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="hit" from="." to="." method="_on_hit"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
